--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,6 +1,6 @@
 {
-	"appId": "io.ionic.starter",
-	"appName": "New Ionic App",
+	"appId": "com.muda_meu_mundo.app",
+	"appName": "muda_meu_mundo",
 	"webDir": "www",
 	"bundledWebRuntime": false
 }
